--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
+* {
+    font-family: Outfit;
+}
 
 @theme {
 
     --color-primary: #5f6fff;
+
 }
 
 ::-webkit-scrollbar {
